--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "extends":["prettier", "plugin:node/recomended"],
     "plugins": ["prettier"],
     "rules": {
-        "prettier/prettier": "erroe",
+        "prettier/prettier": "error",
         "spaced-comment": "off",
         "no-console": "warn",
         "consistent-return":"off",
