upload email handler

--- a/config.env
+++ b/config.env
@@ -13,3 +13,4 @@ EMAIL_HOST = sandbox.smtp.mailtrap.io
 EMAIL_USERNAME= f497c961758fef
 EMAIL_PASSWORD= b0e1fe9e7cd52c
 EMAIL_PORT= 587
+EMAIL_FROM = chandan@gmail.com
