--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "start": "nodemon server.js",
     "start:prod": "cross-env NODE_ENV=production nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "debug": "ndb server.js",
-    "watch:js": "parcel watch ./Public/js/index.js",
-    "build:js": "parcel watch ./Public/js/index.js"
+    "debug": "ndb server.js"
   },
   "author": "Chandan Chaudhary",
   "license": "ISC",
@@ -36,7 +34,7 @@
     "multer": "^1.4.5-lts.1",
     "ndb": "^1.1.5",
     "nodemailer": "^6.9.5",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.0.3",
     "pug": "^3.0.2",
     "sharp": "^0.32.6",
     "slugify": "^1.6.6",
@@ -52,7 +50,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
-    "parcel": "^2.10.2",
     "prettier": "^3.0.3"
   }
 }
